<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllLoginHome"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="20dp">

    <Button
        android:id="@+id/btnadmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/Admin_Login"/>

    <Button
        android:id="@+id/btnexpert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Expert_Login"
        android:textStyle="bold"
        android:layout_below="@+id/btnadmin"/>

    <Button
        android:id="@+id/btnfarmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Farmer_Login"
        android:textStyle="bold"
        android:layout_below="@+id/btnexpert"/>



</RelativeLayout>