<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordFarmer"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgback2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_auro"
            android:padding="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="40sp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:text="@string/make_sel_des"
            android:textSize="18sp" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imgphonenumber"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_mobile"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli"
                android:text="@string/via_sms"
                android:textSize="25sp"

                android:layout_toRightOf="@id/imgphonenumber"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mobile_discription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli"
                android:text=""
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/imgphonenumber"
                android:layout_below="@id/mobile_title"
                />
            
        </RelativeLayout>

        <Button
            android:id="@+id/forgetcontinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

</ScrollView>