<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordFarmer"
    android:background="@color/white"
    android:padding="30dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_auro"
            android:padding="5dp"/>
        
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icons_forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/Forget_password"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="40sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/Forget_pass_desc"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:id="@+id/forgetmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#FDFAFA"
            app:boxStrokeColor="#000"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/Forget_Mobile_Number"
            app:startIconDrawable="@drawable/ic_mobile"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/edtnum"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/fogetnextbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>


    </LinearLayout>

</ScrollView>