<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetNewPassword"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_auro"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons_forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credit"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_identity"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="40dp"
            android:hint="@string/New_password"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/icons_forgot_password"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            android:id="@+id/txtnewpassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/edtnewpassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="10dp"
            android:hint="@string/Conf_password"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/icons_forgot_password"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            android:id="@+id/txtconfirmpassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/edtconfirmpassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnchangepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textSize="15dp"
            android:onClick="setNewPassword"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</ScrollView>